[package]
name = "rix"
version = "0.2.0"
authors = ["Colin Reeder <vpzomtrrfrt@gmail.com>"]
license = "Apache-2.0"
description = "Experimental Matrix client using futures"
repository = "https://github.com/vpzomtrrfrt/rix"

[dependencies]
hyper = "0.11.22"
tokio-core = "0.1.15"
futures = "0.1.18"
hyper-tls = "0.1.3"
quick-error = "1.2.1"
native-tls = "0.1.5"
serde_json = "1.0.12"
serde_derive = "1.0.33"
serde = "1.0.33"
rand = "0.4.2"
