[package]
name = "rix"
version = "1.0.0"
authors = ["Colin Reeder <vpzomtrrfrt@gmail.com>"]
license = "Apache-2.0"
description = "Experimental Matrix client using futures"
repository = "https://github.com/vpzomtrrfrt/rix"

[dependencies]
futures = "0.1.18"
quick-error = "1.2.1"
serde_json = "1.0.12"
serde_derive = "1.0.33"
serde = "1.0.33"
rand = "0.4.2"
urlencoding = "1.0.0"
hyper = "0.12.5"
hyper-tls = "0.3.0"
try_future = "0.1.2"

[dev-dependencies]
tokio = "0.1.7"
